--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             <div id="n">n</div>
             <div id="m">m</div>
         </div>
+        <div class="stats-container">
+            <div class="stats" id="wins"></div>
+            <div class="stats" id="losses"></div>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
