--- a/index.html
+++ b/index.html
@@ -61,11 +61,18 @@
                 <div id="54"></div>
                 <div id="55"></div>
             </div>
+            <div id="fifth" class="indivual-letter-container">
+                <div id="61"></div>
+                <div id="62"></div>
+                <div id="63"></div>
+                <div id="64"></div>
+                <div id="65"></div>
+            </div>
         </div>
     </div>
     
     <div class="input-container">
-        <input onkeyup="handleEnter(event)" maxlength="5" placeholder="Input a 5 letter word" type="text" name="" id="textInput">
+        <input onkeyup="handleEnter(event)" maxlength="5" placeholder="Input a 5 letter word" type="text" name="" id="textInput" autofocus>
         <button id="btn" onclick="Wordle()">SUBMIT</button>
     </div>
     <div class="debug-div" id="debugDiv"></div>
