Replaced alerts with toasts from Toastify

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <div class="darkmode-container">
@@ -17,10 +18,10 @@
             <img id="darkModeIMG" height="25px" src="./public/img/moonwhite.svg" alt="darkmode">
             <span id="checkboxLabel" class="checkbox-label">Dark Mode</span>
         </div>
-        <div>
+        <!-- <div>
             <input onchange="switchDebug()" id="debug" type="checkbox"/>
             <label id="debugLabel" class="checkbox-label" for="debug">Show word</label>
-        </div>
+        </div> -->
     </div>
     <h1 id="title" class="title">Definitely not WORDLE</h1>
 
@@ -115,6 +116,7 @@
             <div class="stats" id="losses"></div>
         </div>
     </div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
