Fixed some styles that broke when commenting the debug checkbox

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <input onkeyup="handleEnter(event)" maxlength="5" placeholder="Input a 5 letter word" type="text" name="" id="textInput" autofocus>
         <button id="btn" onclick="Wordle()">SUBMIT</button>
     </div>
-    <div class="debug-div" id="debugDiv"></div>
+    <!-- <div class="debug-div" id="debugDiv"></div> -->
     <div class="keyboard-container">
         <div class="keyboard-row">
             <div id="q">q</div>
